--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,10 @@ author: Some Person
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  About: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+    - Schematics: "https://beautifuljekyll.com"
+ # Author's home: "https://deanattali.com"
 
 ################
 # --- Logo --- #
@@ -39,7 +38,7 @@ round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-#title-img: /path/to/image
+title-img: /assets/img/TubetopAmps.svg
 
 
 #####################################
