--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: My website
+title: TubeTopAmps
 
 # Your name to show in the footer
 author: Tube Top
@@ -38,7 +38,7 @@ round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-title-img: /assets/img/TubetopAmps.svg
+# title-img: /assets/img/TubetopAmps.svg
 
 
 #####################################
